tests/toylang/neg/001690_mutation.toylang
program a = { while program a do sleep; } .
